2011-08-26  Xavier Perseguers  <xavier@typo3.org>

	* [TASK] Create extension structure