@@ -1,3 +1,4 @@
 2011-08-26  Xavier Perseguers  <xavier@typo3.org>
 
+	* [TASK] Import code from http://forge.typo3.org/projects/extension-egovapi/repository/revisions/51393/entry/trunk/class.ext_update.php
 	* [TASK] Create extension structure
